[non urgent] uptime metric tracks whether --enable-preview is set (#1548)
The `uptime` metric now has an additional tag `enablePreview` which signifies if the `--enable-preview` flag is passed to java at runtime or not.